Updates website with data from 2022-06-08

--- a/index.html
+++ b/index.html
@@ -35,26 +35,26 @@
 <h2>Algorillas NFT Sales Statistics</h2>
 </header>
 <p>Sales data is pulled directly from the blockchain using the <a href="https://algoexplorer.io/">Algoexplorer API</a>.
-<br> Last updated on Jun 06, 2022  at 08:29:14 PST.</p></section>
+<br> Last updated on Jun 08, 2022  at 09:03:52 PST.</p></section>
 
 <section id="sales-vol" class="two">
 <div class="container">
 <header>
-<h2>Algorillas Total Sales Volume: 780,005.76 ALGO</h2>
+<h2>Algorillas Total Sales Volume: 782,653.76 ALGO</h2>
 </header>
 <div style="display: inline-block; text-align: left;">
 <h3>AlgoPrimateElites (A.P.Es)</h3>
 <ul>
 <li>Collection size: 555</li>
 <li>First Secondary Sale: Mar 04, 2022, 1000.0 ALGO</li>
-<li>Last Secondary Sale: Jun 04, 2022, 575.0 ALGO</li>
-<li>Total volume: 337,480.06 ALGO</li>
+<li>Last Secondary Sale: Jun 07, 2022, 869.0 ALGO</li>
+<li>Total volume: 339,318.06 ALGO</li>
 </ul><h3>Algorilla Army</h3>
 <ul>
 <li>Collection size: 1000</li>
 <li>First Secondary Sale: Oct 20, 2021, 125.0 ALGO</li>
-<li>Last Secondary Sale: Jun 02, 2022, 259.0 ALGO</li>
-<li>Total volume: 133,230.58 ALGO</li>
+<li>Last Secondary Sale: Jun 06, 2022, 225.0 ALGO</li>
+<li>Total volume: 134,040.58 ALGO</li>
 </ul><h3>Metacadets</h3>
 <ul>
 <li>Collection size: 118</li>
@@ -228,14 +228,14 @@
 <tr>
 <td>29 < Rank &le; 57</td>
 <td>5% < Rank Percentile &le; 10%</td>
-<td>771.82 ALGO</td>
-<td>11</td>
+<td>788.25 ALGO</td>
+<td>12</td>
 </tr>
 <tr>
 <td>57 < Rank &le; 112</td>
 <td>10% < Rank Percentile &le; 20%</td>
-<td>671.17 ALGO</td>
-<td>36</td>
+<td>676.52 ALGO</td>
+<td>37</td>
 </tr>
 <tr>
 <td>112 < Rank &le; 168</td>
@@ -278,8 +278,8 @@
 <tr>
 <td>51 < Rank &le; 101</td>
 <td>5% < Rank Percentile &le; 10%</td>
-<td>339.94 ALGO</td>
-<td>45</td>
+<td>337.44 ALGO</td>
+<td>46</td>
 </tr>
 <tr>
 <td>101 < Rank &le; 201</td>
@@ -308,8 +308,8 @@
 <tr>
 <td>501 < Rank</td>
 <td>50% < Rank Percentile </td>
-<td>191.68 ALGO</td>
-<td>223</td>
+<td>191.72 ALGO</td>
+<td>226</td>
 </tr>
 </table>
 <h2>Metacadets</h2>
@@ -462,9 +462,9 @@
 </tr>
 <tr>
 <td>OliveDrab</td>
-<td>580.3 ALGO</td>
-<td>945.0 ALGO</td>
-<td>23</td>
+<td>596.5 ALGO</td>
+<td>969.0 ALGO</td>
+<td>24</td>
 <td>6.3%</td>
 </tr>
 <tr>
@@ -511,9 +511,9 @@
 </tr>
 <tr>
 <td>Grey</td>
-<td>484.0 ALGO</td>
+<td>490.9 ALGO</td>
 <td>1300.0 ALGO</td>
-<td>55</td>
+<td>56</td>
 <td>13.0%</td>
 </tr>
 <tr>
@@ -579,9 +579,9 @@
 </tr>
 <tr>
 <td>Black</td>
-<td>611.5 ALGO</td>
+<td>620.4 ALGO</td>
 <td>1111.0 ALGO</td>
-<td>28</td>
+<td>29</td>
 <td>10.2%</td>
 </tr>
 <tr>
@@ -634,18 +634,18 @@
 <td>3.1%</td>
 </tr>
 <tr>
+<td>Green</td>
+<td>537.0 ALGO</td>
+<td>999.0 ALGO</td>
+<td>21</td>
+<td>4.4%</td>
+</tr>
+<tr>
 <td>BrightPink</td>
 <td>515.7 ALGO</td>
 <td>869.0 ALGO</td>
 <td>7</td>
 <td>4.2%</td>
-</tr>
-<tr>
-<td>Green</td>
-<td>515.4 ALGO</td>
-<td>999.0 ALGO</td>
-<td>20</td>
-<td>4.4%</td>
 </tr>
 <tr>
 <td>Teal</td>
@@ -738,9 +738,9 @@
 </tr>
 <tr>
 <td>Light</td>
-<td>530.3 ALGO</td>
+<td>533.2 ALGO</td>
 <td>1395.0 ALGO</td>
-<td>150</td>
+<td>151</td>
 <td>47.0%</td>
 </tr>
 <tr>
@@ -752,9 +752,9 @@
 </tr>
 <tr>
 <td>Normal</td>
-<td>510.4 ALGO</td>
+<td>513.3 ALGO</td>
 <td>1500.0 ALGO</td>
-<td>119</td>
+<td>120</td>
 <td>33.1%</td>
 </tr>
 </table>
@@ -791,6 +791,13 @@
 <td>17.5%</td>
 </tr>
 <tr>
+<td>Purple</td>
+<td>531.3 ALGO</td>
+<td>969.0 ALGO</td>
+<td>54</td>
+<td>13.7%</td>
+</tr>
+<tr>
 <td>Blue</td>
 <td>530.1 ALGO</td>
 <td>999.0 ALGO</td>
@@ -805,13 +812,6 @@
 <td>16.2%</td>
 </tr>
 <tr>
-<td>Purple</td>
-<td>523.1 ALGO</td>
-<td>945.0 ALGO</td>
-<td>53</td>
-<td>13.7%</td>
-</tr>
-<tr>
 <td>Pink</td>
 <td>501.8 ALGO</td>
 <td>1395.0 ALGO</td>
@@ -820,9 +820,9 @@
 </tr>
 <tr>
 <td>Orange</td>
-<td>485.1 ALGO</td>
-<td>850.0 ALGO</td>
-<td>31</td>
+<td>497.1 ALGO</td>
+<td>869.0 ALGO</td>
+<td>32</td>
 <td>11.1%</td>
 </tr>
 </table>
@@ -845,14 +845,14 @@
 <td>0.2%</td>
 </tr>
 <tr>
-<td>HatEgyptianHeaddress</td>
+<td>HatOrnateHelmetClosedGoldSilver</td>
 <td>2000.0 ALGO</td>
 <td>2000.0 ALGO</td>
 <td>1</td>
 <td>0.2%</td>
 </tr>
 <tr>
-<td>HatOrnateHelmetClosedGoldSilver</td>
+<td>HatEgyptianHeaddress</td>
 <td>2000.0 ALGO</td>
 <td>2000.0 ALGO</td>
 <td>1</td>
@@ -883,6 +883,13 @@
 <td>HairSideSweptGrey</td>
 <td>1000.0 ALGO</td>
 <td>1000.0 ALGO</td>
+<td>1</td>
+<td>0.2%</td>
+</tr>
+<tr>
+<td>HairCenterPartGreen</td>
+<td>969.0 ALGO</td>
+<td>969.0 ALGO</td>
 <td>1</td>
 <td>0.2%</td>
 </tr>
@@ -1185,7 +1192,7 @@
 <td>502.3 ALGO</td>
 <td>720.0 ALGO</td>
 <td>17</td>
-<td>5.6%</td>
+<td>5.5%</td>
 </tr>
 <tr>
 <td>HatBowler</td>
@@ -1213,7 +1220,7 @@
 <td>484.4 ALGO</td>
 <td>700.0 ALGO</td>
 <td>11</td>
-<td>4.9%</td>
+<td>4.8%</td>
 </tr>
 <tr>
 <td>HairDreadsTiedYellow</td>
@@ -1234,7 +1241,7 @@
 <td>479.9 ALGO</td>
 <td>700.0 ALGO</td>
 <td>13</td>
-<td>4.9%</td>
+<td>4.8%</td>
 </tr>
 <tr>
 <td>HatBeanieGreen</td>
@@ -1269,7 +1276,7 @@
 <td>440.9 ALGO</td>
 <td>750.0 ALGO</td>
 <td>16</td>
-<td>5.6%</td>
+<td>5.5%</td>
 </tr>
 <tr>
 <td>HairCurlyOrange</td>
@@ -1283,7 +1290,7 @@
 <td>430.7 ALGO</td>
 <td>790.0 ALGO</td>
 <td>20</td>
-<td>5.6%</td>
+<td>5.5%</td>
 </tr>
 <tr>
 <td>HairDreadsTiedOrange</td>
@@ -1536,6 +1543,13 @@
 <td>2.0%</td>
 </tr>
 <tr>
+<td>TurtleneckBlack</td>
+<td>559.7 ALGO</td>
+<td>1500.0 ALGO</td>
+<td>15</td>
+<td>7.7%</td>
+</tr>
+<tr>
 <td>JerseyBlueWhite</td>
 <td>554.5 ALGO</td>
 <td>680.0 ALGO</td>
@@ -1555,13 +1569,6 @@
 <td>900.0 ALGO</td>
 <td>5</td>
 <td>2.6%</td>
-</tr>
-<tr>
-<td>TurtleneckBlack</td>
-<td>537.6 ALGO</td>
-<td>1500.0 ALGO</td>
-<td>14</td>
-<td>7.7%</td>
 </tr>
 <tr>
 <td>PoloBlue</td>
@@ -1912,6 +1919,13 @@
 <td>5.7%</td>
 </tr>
 <tr>
+<td>LeatherJacketBrown</td>
+<td>604.7 ALGO</td>
+<td>969.0 ALGO</td>
+<td>3</td>
+<td>2.0%</td>
+</tr>
+<tr>
 <td>WinterCoatWhite</td>
 <td>603.5 ALGO</td>
 <td>769.0 ALGO</td>
@@ -2080,13 +2094,6 @@
 <td>1.2%</td>
 </tr>
 <tr>
-<td>LeatherJacketBrown</td>
-<td>422.5 ALGO</td>
-<td>550.0 ALGO</td>
-<td>2</td>
-<td>2.0%</td>
-</tr>
-<tr>
 <td>BananaCoat</td>
 <td>417.5 ALGO</td>
 <td>750.0 ALGO</td>
@@ -2127,11 +2134,18 @@
 <td>1.0%</td>
 </tr>
 <tr>
+<td>ScarfGreen</td>
+<td>869.0 ALGO</td>
+<td>869.0 ALGO</td>
+<td>1</td>
+<td>1.0%</td>
+</tr>
+<tr>
 <td>ApesNecklaceGold</td>
 <td>686.0 ALGO</td>
 <td>945.0 ALGO</td>
 <td>5</td>
-<td>6.8%</td>
+<td>6.7%</td>
 </tr>
 <tr>
 <td>BowTieGreen</td>
@@ -2145,35 +2159,35 @@
 <td>573.9 ALGO</td>
 <td>999.0 ALGO</td>
 <td>12</td>
-<td>28.2%</td>
+<td>27.9%</td>
 </tr>
 <tr>
 <td>AlgoNecklaceSilver</td>
 <td>543.1 ALGO</td>
 <td>777.0 ALGO</td>
 <td>21</td>
-<td>31.1%</td>
+<td>30.8%</td>
 </tr>
 <tr>
 <td>ApesNecklaceSilver</td>
 <td>497.7 ALGO</td>
 <td>750.0 ALGO</td>
 <td>4</td>
-<td>15.5%</td>
+<td>15.4%</td>
 </tr>
 <tr>
 <td>ScarfBlack</td>
 <td>496.1 ALGO</td>
 <td>1000.0 ALGO</td>
 <td>8</td>
-<td>11.7%</td>
+<td>11.5%</td>
 </tr>
 <tr>
 <td>ScarfWhite</td>
 <td>470.2 ALGO</td>
 <td>470.2 ALGO</td>
 <td>1</td>
-<td>3.9%</td>
+<td>3.8%</td>
 </tr>
 <tr>
 <td>BowTieRed</td>
@@ -2235,6 +2249,13 @@
 <td>0.4%</td>
 </tr>
 <tr>
+<td>GoateeBlack</td>
+<td>869.0 ALGO</td>
+<td>869.0 ALGO</td>
+<td>1</td>
+<td>2.6%</td>
+</tr>
+<tr>
 <td>MoustacheBlack</td>
 <td>820.0 ALGO</td>
 <td>850.0 ALGO</td>
@@ -2288,14 +2309,14 @@
 <td>704.1 ALGO</td>
 <td>945.0 ALGO</td>
 <td>6</td>
-<td>1.8%</td>
+<td>1.7%</td>
 </tr>
 <tr>
 <td>GoateeWhite</td>
 <td>617.7 ALGO</td>
 <td>777.0 ALGO</td>
 <td>2</td>
-<td>2.2%</td>
+<td>2.1%</td>
 </tr>
 <tr>
 <td>MoustacheWhite</td>
@@ -2316,7 +2337,7 @@
 <td>575.0 ALGO</td>
 <td>700.0 ALGO</td>
 <td>2</td>
-<td>2.2%</td>
+<td>2.1%</td>
 </tr>
 <tr>
 <td>MoustachePurple</td>
@@ -2337,14 +2358,14 @@
 <td>516.4 ALGO</td>
 <td>1500.0 ALGO</td>
 <td>94</td>
-<td>73.7%</td>
+<td>71.8%</td>
 </tr>
 <tr>
 <td>CurlyStashBlack</td>
 <td>400.0 ALGO</td>
 <td>400.0 ALGO</td>
 <td>1</td>
-<td>1.8%</td>
+<td>1.7%</td>
 </tr>
 <tr>
 <td>CurlyStashGreen</td>
@@ -2402,9 +2423,9 @@
 </tr>
 <tr>
 <td>ChestHair</td>
-<td>554.0 ALGO</td>
+<td>558.2 ALGO</td>
 <td>1069.0 ALGO</td>
-<td>73</td>
+<td>74</td>
 <td>70.7%</td>
 </tr>
 </table>
@@ -2495,6 +2516,13 @@
 <td>4.3%</td>
 </tr>
 <tr>
+<td>EyepatchBrown</td>
+<td>543.1 ALGO</td>
+<td>969.0 ALGO</td>
+<td>12</td>
+<td>4.0%</td>
+</tr>
+<tr>
 <td>GlassesRoundClearPurple</td>
 <td>540.8 ALGO</td>
 <td>869.0 ALGO</td>
@@ -2521,13 +2549,6 @@
 <td>750.0 ALGO</td>
 <td>3</td>
 <td>2.2%</td>
-</tr>
-<tr>
-<td>EyepatchBrown</td>
-<td>504.4 ALGO</td>
-<td>750.0 ALGO</td>
-<td>11</td>
-<td>4.0%</td>
 </tr>
 <tr>
 <td>GlassesRoundBlack</td>
@@ -2685,9 +2706,9 @@
 </tr>
 <tr>
 <td>Light Blue and Deep Blue</td>
-<td>292.0 ALGO</td>
+<td>290.2 ALGO</td>
 <td>2690.0 ALGO</td>
-<td>37</td>
+<td>38</td>
 <td>7.3%</td>
 </tr>
 <tr>
@@ -2720,9 +2741,9 @@
 </tr>
 <tr>
 <td>Grey and Silver Radial</td>
-<td>237.0 ALGO</td>
+<td>234.2 ALGO</td>
 <td>990.0 ALGO</td>
-<td>39</td>
+<td>41</td>
 <td>5.8%</td>
 </tr>
 <tr>
@@ -2748,9 +2769,9 @@
 </tr>
 <tr>
 <td>White and Pink</td>
-<td>224.7 ALGO</td>
+<td>224.8 ALGO</td>
 <td>450.0 ALGO</td>
-<td>31</td>
+<td>32</td>
 <td>8.0%</td>
 </tr>
 <tr>
@@ -2851,9 +2872,9 @@
 </tr>
 <tr>
 <td>Silver</td>
-<td>244.5 ALGO</td>
+<td>243.8 ALGO</td>
 <td>800.0 ALGO</td>
-<td>28</td>
+<td>29</td>
 <td>4.3%</td>
 </tr>
 <tr>
@@ -2879,9 +2900,9 @@
 </tr>
 <tr>
 <td>Normal</td>
-<td>210.8 ALGO</td>
+<td>210.6 ALGO</td>
 <td>1200.0 ALGO</td>
-<td>172</td>
+<td>175</td>
 <td>38.6%</td>
 </tr>
 <tr>
@@ -2926,9 +2947,9 @@
 </tr>
 <tr>
 <td>Blue</td>
-<td>289.5 ALGO</td>
+<td>284.2 ALGO</td>
 <td>2690.0 ALGO</td>
-<td>39</td>
+<td>41</td>
 <td>11.5%</td>
 </tr>
 <tr>
@@ -2947,9 +2968,9 @@
 </tr>
 <tr>
 <td>Normal</td>
-<td>232.5 ALGO</td>
+<td>232.4 ALGO</td>
 <td>1200.0 ALGO</td>
-<td>124</td>
+<td>126</td>
 <td>27.3%</td>
 </tr>
 <tr>
@@ -3015,9 +3036,9 @@
 </tr>
 <tr>
 <td>Red</td>
-<td>278.9 ALGO</td>
+<td>277.5 ALGO</td>
 <td>1111.0 ALGO</td>
-<td>40</td>
+<td>41</td>
 <td>8.9%</td>
 </tr>
 <tr>
@@ -3043,16 +3064,16 @@
 </tr>
 <tr>
 <td>Yellow</td>
-<td>216.4 ALGO</td>
+<td>216.5 ALGO</td>
 <td>1050.0 ALGO</td>
-<td>52</td>
+<td>53</td>
 <td>10.9%</td>
 </tr>
 <tr>
 <td>Bloodshot</td>
-<td>203.6 ALGO</td>
+<td>202.0 ALGO</td>
 <td>500.0 ALGO</td>
-<td>28</td>
+<td>30</td>
 <td>6.0%</td>
 </tr>
 <tr>
@@ -3092,14 +3113,14 @@
 <td>Arm up, smiling</td>
 <td>224.1 ALGO</td>
 <td>1725.0 ALGO</td>
-<td>87</td>
+<td>88</td>
 <td>21.7%</td>
 </tr>
 <tr>
 <td>Arm down, smiling</td>
-<td>208.4 ALGO</td>
+<td>208.1 ALGO</td>
 <td>1451.0 ALGO</td>
-<td>133</td>
+<td>136</td>
 <td>25.1%</td>
 </tr>
 </table>
@@ -3186,9 +3207,9 @@
 </tr>
 <tr>
 <td>White Tanktop</td>
-<td>222.7 ALGO</td>
+<td>222.8 ALGO</td>
 <td>2690.0 ALGO</td>
-<td>57</td>
+<td>58</td>
 <td>13.6%</td>
 </tr>
 <tr>
@@ -3207,9 +3228,9 @@
 </tr>
 <tr>
 <td>Yellow Tanktop</td>
-<td>216.3 ALGO</td>
+<td>216.6 ALGO</td>
 <td>500.0 ALGO</td>
-<td>26</td>
+<td>27</td>
 <td>9.5%</td>
 </tr>
 <tr>
@@ -3227,18 +3248,18 @@
 <td>3.6%</td>
 </tr>
 <tr>
-<td>Purple Hawaiian Shirt</td>
-<td>202.8 ALGO</td>
-<td>295.0 ALGO</td>
-<td>13</td>
-<td>4.7%</td>
-</tr>
-<tr>
 <td>Green Vneck</td>
 <td>201.2 ALGO</td>
 <td>300.0 ALGO</td>
 <td>8</td>
 <td>2.5%</td>
+</tr>
+<tr>
+<td>Purple Hawaiian Shirt</td>
+<td>199.8 ALGO</td>
+<td>295.0 ALGO</td>
+<td>15</td>
+<td>4.7%</td>
 </tr>
 <tr>
 <td>Black Sports Bra</td>
@@ -3317,9 +3338,9 @@
 </tr>
 <tr>
 <td>Gold Crown</td>
-<td>504.6 ALGO</td>
+<td>488.1 ALGO</td>
 <td>1200.0 ALGO</td>
-<td>16</td>
+<td>17</td>
 <td>1.6%</td>
 </tr>
 <tr>
@@ -3506,9 +3527,9 @@
 </tr>
 <tr>
 <td>White Fishing Hat</td>
-<td>170.2 ALGO</td>
+<td>171.6 ALGO</td>
 <td>350.0 ALGO</td>
-<td>12</td>
+<td>14</td>
 <td>5.1%</td>
 </tr>
 <tr>
@@ -3553,9 +3574,9 @@
 </tr>
 <tr>
 <td>Spear</td>
-<td>318.2 ALGO</td>
+<td>311.1 ALGO</td>
 <td>998.0 ALGO</td>
-<td>12</td>
+<td>13</td>
 <td>4.5%</td>
 </tr>
 <tr>
@@ -3691,9 +3712,9 @@
 </tr>
 <tr>
 <td>Aviators</td>
-<td>294.1 ALGO</td>
+<td>289.5 ALGO</td>
 <td>900.0 ALGO</td>
-<td>14</td>
+<td>15</td>
 <td>10.0%</td>
 </tr>
 <tr>
@@ -3733,16 +3754,16 @@
 </tr>
 <tr>
 <td>Silver Algo Necklace</td>
-<td>216.6 ALGO</td>
+<td>217.0 ALGO</td>
 <td>550.0 ALGO</td>
-<td>23</td>
+<td>24</td>
 <td>6.2%</td>
 </tr>
 <tr>
 <td>Morpheus Glasses</td>
-<td>210.2 ALGO</td>
+<td>207.7 ALGO</td>
 <td>500.0 ALGO</td>
-<td>22</td>
+<td>24</td>
 <td>9.1%</td>
 </tr>
 <tr>
