Updates website with data from 2022-09-13

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 <h2>Algorillas NFT Sales Statistics</h2>
 </header>
 <p>Sales data is pulled directly from the blockchain using the <a href="https://algoexplorer.io/">Algoexplorer API</a>.
-<br> Last updated on Sep 11, 2022  at 11:45:29 PST.</p></section>
+<br> Last updated on Sep 13, 2022  at 16:51:47 PST.</p></section>
 
 <section id="sales-vol" class="two">
 <div class="container">
 <header>
-<h2>Algorillas Total Sales Volume: 973,332.69 ALGO</h2>
+<h2>Algorillas Total Sales Volume: 991,707.69 ALGO</h2>
 </header>
 <div style="display: inline-block; text-align: left;">
 <h3>AlgoPrimateElites (A.P.Es)</h3>
@@ -55,7 +55,7 @@
 <li>First Secondary Sale: Oct 20, 2021, 125.0 ALGO</li>
 <li>Last Secondary Sale: Aug 28, 2022, 4206.9 ALGO</li>
 <li>Total volume: 224,210.74 ALGO</li>
-</ul><h3>Metacadets</h3>
+</ul><h3>MetaCadets</h3>
 <ul>
 <li>Collection size: 118</li>
 <li>First Secondary Sale: Jan 19, 2022, 300.0 ALGO</li>
@@ -73,18 +73,24 @@
 <li>First Secondary Sale: Dec 14, 2021, 200.0 ALGO</li>
 <li>Last Secondary Sale: Aug 26, 2022, 350.0 ALGO</li>
 <li>Total volume: 60,712.28 ALGO</li>
-</ul><h3>Metaengineers</h3>
+</ul><h3>MetaEngineers</h3>
 <ul>
 <li>Collection size: 118</li>
 <li>First Secondary Sale: Apr 05, 2022, 650.0 ALGO</li>
 <li>Last Secondary Sale: Sep 09, 2022, 650.0 ALGO</li>
 <li>Total volume: 48,138.69 ALGO</li>
-</ul><h3>Metapilots</h3>
+</ul><h3>MetaPilots</h3>
 <ul>
 <li>Collection size: 118</li>
 <li>First Secondary Sale: Jun 08, 2022, 400.0 ALGO</li>
 <li>Last Secondary Sale: Sep 09, 2022, 500.0 ALGO</li>
 <li>Total volume: 36,954.38 ALGO</li>
+</ul><h3>MetaDefenders</h3>
+<ul>
+<li>Collection size: 118</li>
+<li>First Secondary Sale: Sep 12, 2022, 350.0 ALGO</li>
+<li>Last Secondary Sale: Sep 13, 2022, 350.0 ALGO</li>
+<li>Total volume: 18,375.00 ALGO</li>
 </ul><h3>Babyrillas</h3>
 <ul>
 <li>Collection size: 11</li>
@@ -180,7 +186,7 @@
 <article class="item">
 <a href="https://www.nftexplorer.app/asset/548281415" class="image fit"><img src=images/metacadet_72_stats.jpg /></a>
 <header>
-<h2>Metacadets</h2>
+<h2>MetaCadets</h2>
 </header>
 </article>
 </div>
@@ -188,7 +194,7 @@
 <article class="item">
 <a href="https://www.nftexplorer.app/asset/682209776" class="image fit"><img src=images/metaengineer_63_stats.jpg /></a>
 <header>
-<h2>Metaengineers</h2>
+<h2>MetaEngineers</h2>
 </header>
 </article>
 </div>
@@ -196,7 +202,15 @@
 <article class="item">
 <a href="https://www.nftexplorer.app/asset/768188038" class="image fit"><img src=images/metapilot_78_stats.jpg /></a>
 <header>
-<h2>Metapilots</h2>
+<h2>MetaPilots</h2>
+</header>
+</article>
+</div>
+<div class="aln-bottom col-4 col-12-mobile">
+<article class="item">
+<a href="https://www.nftexplorer.app/asset/865972558" class="image fit"><img src=images/metadefender_46.png /></a>
+<header>
+<h2>MetaDefenders</h2>
 </header>
 </article>
 </div>
@@ -346,7 +360,7 @@
 <td>490</td>
 </tr>
 </table>
-<h2>Metacadets</h2>
+<h2>MetaCadets</h2>
 <table>
 <tr>
 <th>Ranking</th>
@@ -396,7 +410,7 @@
 <td>92</td>
 </tr>
 </table>
-<h2>Metaengineers</h2>
+<h2>MetaEngineers</h2>
 <table>
 <tr>
 <th>Ranking</th>
@@ -446,7 +460,7 @@
 <td>34</td>
 </tr>
 </table>
-<h2>Metapilots</h2>
+<h2>MetaPilots</h2>
 <table>
 <tr>
 <th>Ranking</th>
@@ -494,6 +508,56 @@
 <td>50% < Rank Percentile </td>
 <td>278.02 ALGO</td>
 <td>58</td>
+</tr>
+</table>
+<h2>MetaDefenders</h2>
+<table>
+<tr>
+<th>Ranking</th>
+<th>Ranking Percentile</th>
+<th>Average Sale Price</th>
+<th>Number of Sales</th>
+</tr><tr>
+<td>Rank &le; 7</td>
+<td>Rank Percentile &le; 5%</td>
+<td>350.00 ALGO</td>
+<td>2</td>
+</tr>
+<tr>
+<td>7 < Rank &le; 13</td>
+<td>5% < Rank Percentile &le; 10%</td>
+<td>350.00 ALGO</td>
+<td>4</td>
+</tr>
+<tr>
+<td>13 < Rank &le; 25</td>
+<td>10% < Rank Percentile &le; 20%</td>
+<td>310.71 ALGO</td>
+<td>7</td>
+</tr>
+<tr>
+<td>25 < Rank &le; 37</td>
+<td>20% < Rank Percentile &le; 30%</td>
+<td>350.00 ALGO</td>
+<td>5</td>
+</tr>
+<tr>
+<td>37 < Rank &le; 48</td>
+<td>30% < Rank Percentile &le; 40%</td>
+<td>350.00 ALGO</td>
+<td>3</td>
+</tr>
+<tr>
+<td>48 < Rank &le; 60</td>
+<td>40% < Rank Percentile &le; 50%</td>
+<td>350.00 ALGO</td>
+<td>5</td>
+</tr>
+<tr>
+<td>60 < Rank</td>
+<td>50% < Rank Percentile </td>
+<td>329.31 ALGO</td>
+<td>29</td>
 </tr>
 </table>
 </div>
@@ -3964,7 +4028,7 @@
 </tr>
 </table>
 </div>
-<h2>Metacadets</h2>
+<h2>MetaCadets</h2>
 <button type='button' class='collapsible'>Skin</button>
 <div class='content'>
 <table>
@@ -4792,7 +4856,7 @@
 </tr>
 </table>
 </div>
-<h2>Metaengineers</h2>
+<h2>MetaEngineers</h2>
 <button type='button' class='collapsible'>Skin</button>
 <div class='content'>
 <table>
@@ -6205,7 +6269,7 @@
 </tr>
 </table>
 </div>
-<h2>Metapilots</h2>
+<h2>MetaPilots</h2>
 <button type='button' class='collapsible'>Skin</button>
 <div class='content'>
 <table>
@@ -7410,6 +7474,518 @@
 <td>350.0 ALGO</td>
 <td>2</td>
 <td>2.5%</td>
+</tr>
+</table>
+</div>
+<h2>MetaDefenders</h2>
+<button type='button' class='collapsible'>Skin</button>
+<div class='content'>
+<table>
+<tr>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
+</tr>
+<tr>
+<td>acid</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>1</td>
+<td>0.9%</td>
+</tr>
+<tr>
+<td>black</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>6</td>
+<td>11.0%</td>
+</tr>
+<tr>
+<td>tan</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>2</td>
+<td>7.3%</td>
+</tr>
+<tr>
+<td>stone</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>4</td>
+<td>4.6%</td>
+</tr>
+<tr>
+<td>silver</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>2</td>
+<td>2.8%</td>
+</tr>
+<tr>
+<td>red</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>2</td>
+<td>9.2%</td>
+</tr>
+<tr>
+<td>radioactive</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>1</td>
+<td>1.8%</td>
+</tr>
+<tr>
+<td>purple</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>1</td>
+<td>5.5%</td>
+</tr>
+<tr>
+<td>pink</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>2</td>
+<td>5.5%</td>
+</tr>
+<tr>
+<td>orange</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>4</td>
+<td>6.4%</td>
+</tr>
+<tr>
+<td>metallic red</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>1</td>
+<td>2.8%</td>
+</tr>
+<tr>
+<td>metallic purple</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>1</td>
+<td>1.8%</td>
+</tr>
+<tr>
+<td>green</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>6</td>
+<td>6.4%</td>
+</tr>
+<tr>
+<td>copper</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>2</td>
+<td>3.7%</td>
+</tr>
+<tr>
+<td>yellow</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>6</td>
+<td>7.3%</td>
+</tr>
+<tr>
+<td>white</td>
+<td>304.2 ALGO</td>
+<td>350.0 ALGO</td>
+<td>6</td>
+<td>10.1%</td>
+</tr>
+<tr>
+<td>blue</td>
+<td>290.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>5</td>
+<td>8.3%</td>
+</tr>
+<tr>
+<td>marble</td>
+<td>250.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>3</td>
+<td>4.6%</td>
+</tr>
+</table>
+</div>
+<button type='button' class='collapsible'>Eyes</button>
+<div class='content'>
+<table>
+<tr>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
+</tr>
+<tr>
+<td>acid</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>1</td>
+<td>1.7%</td>
+</tr>
+<tr>
+<td>orange</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>5</td>
+<td>6.1%</td>
+</tr>
+<tr>
+<td>solid white</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>1</td>
+<td>2.6%</td>
+</tr>
+<tr>
+<td>solid black</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>1</td>
+<td>3.5%</td>
+</tr>
+<tr>
+<td>silver</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>2</td>
+<td>4.3%</td>
+</tr>
+<tr>
+<td>red</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>3</td>
+<td>7.0%</td>
+</tr>
+<tr>
+<td>radioactive</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>1</td>
+<td>1.7%</td>
+</tr>
+<tr>
+<td>purple</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>1</td>
+<td>5.2%</td>
+</tr>
+<tr>
+<td>pink</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>2</td>
+<td>5.2%</td>
+</tr>
+<tr>
+<td>yellow</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>5</td>
+<td>7.8%</td>
+</tr>
+<tr>
+<td>grey</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>6</td>
+<td>9.6%</td>
+</tr>
+<tr>
+<td>green</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>5</td>
+<td>6.1%</td>
+</tr>
+<tr>
+<td>gold</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>2</td>
+<td>3.5%</td>
+</tr>
+<tr>
+<td>copper</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>2</td>
+<td>4.3%</td>
+</tr>
+<tr>
+<td>brown</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>3</td>
+<td>7.0%</td>
+</tr>
+<tr>
+<td>blue</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>3</td>
+<td>8.7%</td>
+</tr>
+<tr>
+<td>bloodshot</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>2</td>
+<td>2.6%</td>
+</tr>
+<tr>
+<td>black</td>
+<td>275.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>8</td>
+<td>10.4%</td>
+</tr>
+<tr>
+<td>hypno</td>
+<td>212.5 ALGO</td>
+<td>350.0 ALGO</td>
+<td>2</td>
+<td>2.6%</td>
+</tr>
+</table>
+</div>
+<button type='button' class='collapsible'>Fur</button>
+<div class='content'>
+<table>
+<tr>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
+</tr>
+<tr>
+<td>acid</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>3</td>
+<td>3.4%</td>
+</tr>
+<tr>
+<td>black</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>11</td>
+<td>13.8%</td>
+</tr>
+<tr>
+<td>blue zebra</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>2</td>
+<td>1.7%</td>
+</tr>
+<tr>
+<td>brown</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>8</td>
+<td>17.2%</td>
+</tr>
+<tr>
+<td>gold</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>1</td>
+<td>4.3%</td>
+</tr>
+<tr>
+<td>orange</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>3</td>
+<td>6.9%</td>
+</tr>
+<tr>
+<td>polka dot</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>2</td>
+<td>2.6%</td>
+</tr>
+<tr>
+<td>purple</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>3</td>
+<td>5.2%</td>
+</tr>
+<tr>
+<td>red</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>5</td>
+<td>10.3%</td>
+</tr>
+<tr>
+<td>white</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>5</td>
+<td>12.1%</td>
+</tr>
+<tr>
+<td>yellow</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>3</td>
+<td>7.8%</td>
+</tr>
+<tr>
+<td>green</td>
+<td>281.2 ALGO</td>
+<td>350.0 ALGO</td>
+<td>4</td>
+<td>6.0%</td>
+</tr>
+<tr>
+<td>blue</td>
+<td>230.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>5</td>
+<td>8.6%</td>
+</tr>
+</table>
+</div>
+<button type='button' class='collapsible'>Dog tag</button>
+<div class='content'>
+<table>
+<tr>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
+</tr>
+<tr>
+<td>bejeweled</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>5</td>
+<td>11.0%</td>
+</tr>
+<tr>
+<td>copper</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>9</td>
+<td>16.1%</td>
+</tr>
+<tr>
+<td>gunmetal</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>8</td>
+<td>16.9%</td>
+</tr>
+<tr>
+<td>jade</td>
+<td>350.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>8</td>
+<td>15.3%</td>
+</tr>
+<tr>
+<td>hologram</td>
+<td>319.4 ALGO</td>
+<td>350.0 ALGO</td>
+<td>9</td>
+<td>12.7%</td>
+</tr>
+<tr>
+<td>gold</td>
+<td>312.5 ALGO</td>
+<td>350.0 ALGO</td>
+<td>8</td>
+<td>13.6%</td>
+</tr>
+<tr>
+<td>silver</td>
+<td>312.5 ALGO</td>
+<td>350.0 ALGO</td>
+<td>8</td>
+<td>14.4%</td>
+</tr>
+</table>
+</div>
+<button type='button' class='collapsible'>Background</button>
+<div class='content'>
+<table>
+<tr>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
+</tr>
+<tr>
+<td>interstellar medium</td>
+<td>334.1 ALGO</td>
+<td>350.0 ALGO</td>
+<td>55</td>
+<td>100.0%</td>
+</tr>
+</table>
+</div>
+<button type='button' class='collapsible'>Armor</button>
+<div class='content'>
+<table>
+<tr>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
+</tr>
+<tr>
+<td>none</td>
+<td>334.1 ALGO</td>
+<td>350.0 ALGO</td>
+<td>55</td>
+<td>100.0%</td>
+</tr>
+</table>
+</div>
+<button type='button' class='collapsible'>Mutation</button>
+<div class='content'>
+<table>
+<tr>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
+</tr>
+<tr>
+<td>healthy</td>
+<td>336.4 ALGO</td>
+<td>350.0 ALGO</td>
+<td>44</td>
+<td>79.7%</td>
+</tr>
+<tr>
+<td>mutant</td>
+<td>325.0 ALGO</td>
+<td>350.0 ALGO</td>
+<td>11</td>
+<td>20.3%</td>
 </tr>
 </table>
 </div>
