Updates website with data from 2022-09-23

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 <h2>Algorillas NFT Sales Statistics</h2>
 </header>
 <p>Sales data is pulled directly from the blockchain using the <a href="https://algoexplorer.io/">Algoexplorer API</a>.
-<br> Last updated on Sep 22, 2022  at 13:12:36 PST.</p></section>
+<br> Last updated on Sep 23, 2022  at 12:15:11 PST.</p></section>
 
 <section id="sales-vol" class="two">
 <div class="container">
 <header>
-<h2>Algorillas Total Sales Volume: 1,009,708.38 ALGO</h2>
+<h2>Algorillas Total Sales Volume: 1,010,747.38 ALGO</h2>
 </header>
 <div style="display: inline-block; text-align: left;">
 <h3>AlgoPrimateElites (A.P.Es)</h3>
@@ -48,13 +48,13 @@
 <li>Collection size: 555</li>
 <li>First Secondary Sale: Mar 04, 2022, 1000.0 ALGO</li>
 <li>Last Secondary Sale: Sep 19, 2022, 630.0 ALGO</li>
-<li>Total volume: 380,695.45 ALGO</li>
+<li>Total volume: 381,644.45 ALGO</li>
 </ul><h3>Algorilla Army</h3>
 <ul>
 <li>Collection size: 830</li>
 <li>First Secondary Sale: Oct 20, 2021, 125.0 ALGO</li>
-<li>Last Secondary Sale: Sep 21, 2022, 99.0 ALGO</li>
-<li>Total volume: 230,923.43 ALGO</li>
+<li>Last Secondary Sale: Sep 23, 2022, 90.0 ALGO</li>
+<li>Total volume: 231,013.43 ALGO</li>
 </ul><h3>MetaCadets</h3>
 <ul>
 <li>Collection size: 118</li>
@@ -208,7 +208,7 @@
 </div>
 <div class="aln-bottom col-4 col-12-mobile">
 <article class="item">
-<a href="https://www.nftexplorer.app/asset/865972558" class="image fit"><img src=images/metadefender_46.png /></a>
+<a href="https://www.nftexplorer.app/asset/865972558" class="image fit"><img src=images/metadefender_46_stats.jpg /></a>
 <header>
 <h2>MetaDefenders</h2>
 </header>
@@ -306,7 +306,7 @@
 <tr>
 <td>278 < Rank</td>
 <td>50% < Rank Percentile </td>
-<td>509.90 ALGO</td>
+<td>514.36 ALGO</td>
 <td>213</td>
 </tr>
 </table>
@@ -356,8 +356,8 @@
 <tr>
 <td>416 < Rank</td>
 <td>50% < Rank Percentile </td>
-<td>146.40 ALGO</td>
-<td>508</td>
+<td>146.29 ALGO</td>
+<td>509</td>
 </tr>
 </table>
 <h2>MetaCadets</h2>
@@ -631,7 +631,7 @@
 </tr>
 <tr>
 <td>DullBlue</td>
-<td>530.3 ALGO</td>
+<td>537.9 ALGO</td>
 <td>1750.0 ALGO</td>
 <td>59</td>
 <td>13.0%</td>
@@ -666,7 +666,7 @@
 </tr>
 <tr>
 <td>Grey</td>
-<td>503.9 ALGO</td>
+<td>510.7 ALGO</td>
 <td>1300.0 ALGO</td>
 <td>74</td>
 <td>13.0%</td>
@@ -706,7 +706,7 @@
 </tr>
 <tr>
 <td>Gold</td>
-<td>654.6 ALGO</td>
+<td>773.2 ALGO</td>
 <td>2000.0 ALGO</td>
 <td>8</td>
 <td>2.7%</td>
@@ -879,7 +879,7 @@
 </tr>
 <tr>
 <td>Light</td>
-<td>547.1 ALGO</td>
+<td>549.9 ALGO</td>
 <td>1750.0 ALGO</td>
 <td>177</td>
 <td>46.7%</td>
@@ -893,7 +893,7 @@
 </tr>
 <tr>
 <td>Normal</td>
-<td>530.5 ALGO</td>
+<td>533.5 ALGO</td>
 <td>1600.0 ALGO</td>
 <td>151</td>
 <td>33.0%</td>
@@ -953,6 +953,13 @@
 <td>17.5%</td>
 </tr>
 <tr>
+<td>Blue</td>
+<td>533.5 ALGO</td>
+<td>1600.0 ALGO</td>
+<td>72</td>
+<td>13.8%</td>
+</tr>
+<tr>
 <td>Purple</td>
 <td>532.8 ALGO</td>
 <td>969.0 ALGO</td>
@@ -960,11 +967,11 @@
 <td>13.7%</td>
 </tr>
 <tr>
-<td>Blue</td>
-<td>526.6 ALGO</td>
-<td>1600.0 ALGO</td>
-<td>72</td>
-<td>13.8%</td>
+<td>Pink</td>
+<td>519.6 ALGO</td>
+<td>1395.0 ALGO</td>
+<td>40</td>
+<td>12.2%</td>
 </tr>
 <tr>
 <td>Orange</td>
@@ -972,13 +979,6 @@
 <td>869.0 ALGO</td>
 <td>45</td>
 <td>11.1%</td>
-</tr>
-<tr>
-<td>Pink</td>
-<td>508.4 ALGO</td>
-<td>1395.0 ALGO</td>
-<td>40</td>
-<td>12.2%</td>
 </tr>
 </table>
 </div>
@@ -1196,18 +1196,18 @@
 <td>0.9%</td>
 </tr>
 <tr>
-<td>HairCenterPartOrange</td>
-<td>625.0 ALGO</td>
-<td>850.0 ALGO</td>
-<td>2</td>
-<td>0.7%</td>
-</tr>
-<tr>
 <td>HatHeadbandPurple</td>
 <td>625.0 ALGO</td>
 <td>900.0 ALGO</td>
 <td>2</td>
 <td>0.2%</td>
+</tr>
+<tr>
+<td>HairCenterPartOrange</td>
+<td>625.0 ALGO</td>
+<td>850.0 ALGO</td>
+<td>2</td>
+<td>0.7%</td>
 </tr>
 <tr>
 <td>HatBeanieBrown</td>
@@ -1322,11 +1322,25 @@
 <td>0.7%</td>
 </tr>
 <tr>
+<td>HatBeanieBlack</td>
+<td>538.3 ALGO</td>
+<td>898.0 ALGO</td>
+<td>17</td>
+<td>5.4%</td>
+</tr>
+<tr>
 <td>HatFedoraRed</td>
 <td>537.7 ALGO</td>
 <td>625.0 ALGO</td>
 <td>7</td>
 <td>0.9%</td>
+</tr>
+<tr>
+<td>HatHeadphonesBlack</td>
+<td>535.0 ALGO</td>
+<td>1000.0 ALGO</td>
+<td>20</td>
+<td>4.8%</td>
 </tr>
 <tr>
 <td>HairBowlOrange</td>
@@ -1357,25 +1371,11 @@
 <td>2.9%</td>
 </tr>
 <tr>
-<td>HatBeanieBlack</td>
-<td>511.9 ALGO</td>
-<td>720.0 ALGO</td>
-<td>17</td>
-<td>5.4%</td>
-</tr>
-<tr>
 <td>HatBrain</td>
 <td>511.5 ALGO</td>
 <td>750.8 ALGO</td>
 <td>7</td>
 <td>2.5%</td>
-</tr>
-<tr>
-<td>HatHeadphonesBlack</td>
-<td>510.1 ALGO</td>
-<td>700.0 ALGO</td>
-<td>20</td>
-<td>4.8%</td>
 </tr>
 <tr>
 <td>HatBaseballBlue</td>
@@ -1385,18 +1385,18 @@
 <td>4.8%</td>
 </tr>
 <tr>
-<td>HairCenterPartWhite</td>
-<td>500.0 ALGO</td>
-<td>700.0 ALGO</td>
-<td>2</td>
-<td>1.4%</td>
-</tr>
-<tr>
 <td>HairDreadsShortBlueWhite</td>
 <td>500.0 ALGO</td>
 <td>500.0 ALGO</td>
 <td>1</td>
 <td>0.2%</td>
+</tr>
+<tr>
+<td>HairCenterPartWhite</td>
+<td>500.0 ALGO</td>
+<td>700.0 ALGO</td>
+<td>2</td>
+<td>1.4%</td>
 </tr>
 <tr>
 <td>HatHeadphonesRed</td>
@@ -1810,6 +1810,13 @@
 <td>2.0%</td>
 </tr>
 <tr>
+<td>SweatshirtGrey</td>
+<td>531.5 ALGO</td>
+<td>898.0 ALGO</td>
+<td>11</td>
+<td>2.6%</td>
+</tr>
+<tr>
 <td>SweatshirtBrown</td>
 <td>513.0 ALGO</td>
 <td>750.0 ALGO</td>
@@ -1850,13 +1857,6 @@
 <td>680.0 ALGO</td>
 <td>5</td>
 <td>0.9%</td>
-</tr>
-<tr>
-<td>SweatshirtGrey</td>
-<td>490.7 ALGO</td>
-<td>777.0 ALGO</td>
-<td>11</td>
-<td>2.6%</td>
 </tr>
 <tr>
 <td>SweatshirtBlue</td>
@@ -1971,17 +1971,17 @@
 <td>1.1%</td>
 </tr>
 <tr>
-<td>ShirtFlamingoPatternOrange</td>
-<td>400.0 ALGO</td>
-<td>400.0 ALGO</td>
-<td>1</td>
-<td>0.6%</td>
-</tr>
-<tr>
 <td>ShirtOldFashionedPinkSilver</td>
 <td>400.0 ALGO</td>
 <td>450.0 ALGO</td>
 <td>2</td>
+<td>0.6%</td>
+</tr>
+<tr>
+<td>ShirtFlamingoPatternOrange</td>
+<td>400.0 ALGO</td>
+<td>400.0 ALGO</td>
+<td>1</td>
 <td>0.6%</td>
 </tr>
 <tr>
@@ -2655,14 +2655,14 @@
 </tr>
 <tr>
 <td>HarambeHeartTattoo</td>
-<td>594.1 ALGO</td>
+<td>612.0 ALGO</td>
 <td>1500.0 ALGO</td>
 <td>28</td>
 <td>29.3%</td>
 </tr>
 <tr>
 <td>ChestHair</td>
-<td>560.0 ALGO</td>
+<td>564.9 ALGO</td>
 <td>1750.0 ALGO</td>
 <td>91</td>
 <td>70.7%</td>
@@ -2776,6 +2776,13 @@
 <td>4.0%</td>
 </tr>
 <tr>
+<td>GlassesRoundClearRed</td>
+<td>524.2 ALGO</td>
+<td>1000.0 ALGO</td>
+<td>8</td>
+<td>3.3%</td>
+</tr>
+<tr>
 <td>GlassesRoundClearGreen</td>
 <td>523.7 ALGO</td>
 <td>750.0 ALGO</td>
@@ -2830,13 +2837,6 @@
 <td>600.0 ALGO</td>
 <td>7</td>
 <td>2.5%</td>
-</tr>
-<tr>
-<td>GlassesRoundClearRed</td>
-<td>461.8 ALGO</td>
-<td>680.0 ALGO</td>
-<td>8</td>
-<td>3.3%</td>
 </tr>
 <tr>
 <td>GlassesRoundClearBlue</td>
@@ -3007,18 +3007,18 @@
 <td>7.3%</td>
 </tr>
 <tr>
-<td>White and Purple</td>
-<td>166.7 ALGO</td>
-<td>900.0 ALGO</td>
-<td>64</td>
-<td>6.1%</td>
-</tr>
-<tr>
 <td>Purple and Light Green and White Radial</td>
 <td>165.6 ALGO</td>
 <td>550.0 ALGO</td>
 <td>23</td>
 <td>2.7%</td>
+</tr>
+<tr>
+<td>White and Purple</td>
+<td>165.5 ALGO</td>
+<td>900.0 ALGO</td>
+<td>65</td>
+<td>6.1%</td>
 </tr>
 <tr>
 <td>White and Pink</td>
@@ -3132,9 +3132,9 @@
 </tr>
 <tr>
 <td>Normal</td>
-<td>159.8 ALGO</td>
+<td>159.7 ALGO</td>
 <td>1200.0 ALGO</td>
-<td>385</td>
+<td>386</td>
 <td>38.3%</td>
 </tr>
 <tr>
@@ -3221,9 +3221,9 @@
 </tr>
 <tr>
 <td>Normal</td>
-<td>164.0 ALGO</td>
+<td>163.7 ALGO</td>
 <td>1200.0 ALGO</td>
-<td>286</td>
+<td>287</td>
 <td>27.2%</td>
 </tr>
 <tr>
@@ -3295,18 +3295,18 @@
 <td>30.4%</td>
 </tr>
 <tr>
-<td>Blue</td>
-<td>166.2 ALGO</td>
-<td>1200.0 ALGO</td>
-<td>142</td>
-<td>15.5%</td>
-</tr>
-<tr>
 <td>Yellow</td>
 <td>165.9 ALGO</td>
 <td>1050.0 ALGO</td>
 <td>108</td>
 <td>10.4%</td>
+</tr>
+<tr>
+<td>Blue</td>
+<td>165.7 ALGO</td>
+<td>1200.0 ALGO</td>
+<td>143</td>
+<td>15.5%</td>
 </tr>
 <tr>
 <td>Black</td>
@@ -3336,9 +3336,9 @@
 </tr>
 <tr>
 <td>Arm down</td>
-<td>211.8 ALGO</td>
+<td>211.4 ALGO</td>
 <td>2690.0 ALGO</td>
-<td>284</td>
+<td>285</td>
 <td>30.1%</td>
 </tr>
 <tr>
@@ -3551,9 +3551,9 @@
 </tr>
 <tr>
 <td>Purple Hawaiian Shirt</td>
-<td>129.8 ALGO</td>
+<td>128.8 ALGO</td>
 <td>250.0 ALGO</td>
-<td>37</td>
+<td>38</td>
 <td>4.5%</td>
 </tr>
 </table>
@@ -3674,18 +3674,18 @@
 <td>2.6%</td>
 </tr>
 <tr>
-<td>Red Backwards Cap</td>
-<td>164.7 ALGO</td>
-<td>750.0 ALGO</td>
-<td>37</td>
-<td>5.0%</td>
-</tr>
-<tr>
 <td>Light Blue Backwards Cap</td>
 <td>162.9 ALGO</td>
 <td>499.0 ALGO</td>
 <td>15</td>
 <td>2.8%</td>
+</tr>
+<tr>
+<td>Red Backwards Cap</td>
+<td>162.8 ALGO</td>
+<td>750.0 ALGO</td>
+<td>38</td>
+<td>5.0%</td>
 </tr>
 <tr>
 <td>Green Dreads</td>
@@ -4014,9 +4014,9 @@
 </tr>
 <tr>
 <td>White Shudder Shades</td>
-<td>158.0 ALGO</td>
+<td>157.1 ALGO</td>
 <td>750.0 ALGO</td>
-<td>74</td>
+<td>75</td>
 <td>12.5%</td>
 </tr>
 <tr>
